--- a/loos.dox
+++ b/loos.dox
@@ -1331,10 +1331,11 @@ Matlab and Octave.
 
 
 /*! \page Changes Change Log
-\section release210 Version 2.1.0 (X-XX-XXXX)
-\subsection r210_bugs Bug Fixes
+\section release210 Version 2.1.0 (11-25-2013)
 \subsection r210_add_changed Added, Changed, or Otherwise Notable
 <ul>
+  <li> Substantial change to build system.  See INSTALL file or
+  \subpage building
   <li> Changed how atomid's are handled in LOOS.  They are no longer
   indices into the trajectory frame for atom coordinates.  Atoms now
   have an "index" property for that purpose.  The index is
